# ProjectQt

./: CMakeLists.txt  README.md  bad_login.cpp  bad_login.h  bad_password.cpp  bad_password.h  chat.cpp  chat.h  database.cpp  database.h  logger.cpp  loginform.cpp  loginform.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registrationform.cpp  registrationform.h  server.cpp  server.h  startscreen.cpp  startscreen.h  users.cpp  users.h
client/: client.cpp  client.h  clientstart.cpp  clientstart.h  loginform.cpp  loginform.h  loginform.ui  main.cpp  mainwindow.cpp  mainwindow.h  registrationform.cpp  registrationform.h  registrationform.ui  startscreen.cpp  startscreen.h
server/: CMakeLists.txt  Message.h  chat.cpp  chat.h  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parsing.cpp  parsing.h  server.cpp  server.h  users.cpp  users.h
sources/: Test.cpp  loginform.cpp  loginform.h  loginform.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  registrationform.cpp  registrationform.h  registrationform.ui  startscreen.cpp  startscreen.ui
